# Chessboard

Documents/S1/PI/: a.out
Documents/S4/PROJECT/: CMakeLists.txt  Project.cpp  buffer.cpp
Documents/S4/PROJECT/include/: Board.h
Documents/S4/PROJECT/src/: move.cpp
PROJECT/: CMakeLists.txt  Project.cpp  buffer.cpp  example_game.txt
PROJECT/include/: Board.h  Graphic.h  move.h
PROJECT/src/: Graphic.cpp  move.cpp  moveBishop.cpp  moveBlackPawn.cpp  moveKing.cpp  moveKnight.cpp  movePawn.cpp  moveQueen.cpp  moveRook.cpp  moveWhitePawn.cpp
